temporary whitespace fix

--- a/style.css
+++ b/style.css
@@ -117,3 +117,6 @@ color: #404040;
 text-align: center;
 vertical-align: center;
 }
+.show-next{
+    margin-top: -377px;
+}
